# zephyr-workspace

./: .gitignore  README.md  common.mk  init_venv.sh  init_workspace.sh  mkvimtags.sh  pyproject.toml  requirements.txt  utils.sh  workspace-env.sh
manifest-repo/: west.yml
