[project]
name = "zephyr-workspace"
version = "0.1.0"
requires-python = ">=3.10"
# Environment development dependencies:
# Add more using: uv add <dep>
dependencies = [
    "west>=0.14.0",
    "protobuf>=3.20.3",
    "grpcio-tools>=1.47.0",
    "betterproto[compiler]==2.0.0b6",
    "zephyr-python",
]

[tool.uv]
package = false

[tool.uv.sources]
zephyr-python = { path = "python" }

# Zephyr dependencies added using:
# uv add --group zephyr -r deps/zephyr/scripts/requirements.txt
[dependency-groups]
zephyr = [
    "anytree>=2.12.1",
    "canopen>=2.3.0",
    "cbor>=1.0.0",
    "clang-format>=15.0.0",
    "colorama>=0.4.6",
    "coverage>=7.6.9",
    "gcovr>=6.0",
    "gitlint>=0.19.1",
    "gitpython>=3.1.43",
    "graphviz>=0.20.3",
    "grpcio-tools>=1.47.0",
    "imgtool>=2.1.0",
    "intelhex>=2.3.0",
    "junit2html>=31.0.2",
    "junitparser>=2",
    "lpc-checksum>=3.0.0",
    "lxml>=5.3.0",
    "mock>=4.0.1",
    "mypy>=1.14.0",
    "natsort>=8.4.0",
    "packaging>=24.2",
    "patool>=3.1.0",
    "pillow>=10.0",
    "ply>=3.10",
    "progress>=1.6",
    "protobuf>=3.20.3",
    "psutil>=6.1.1",
    "pyelftools>=0.29",
    "pygithub>=2.5.0",
    "pykwalify>=1.8.0",
    "pylink-square>=1.3.0",
    "pylint>=3",
    "pyocd>=0.35.0",
    "pyserial>=3.5",
    "pytest>=8.3.4",
    "python-can>=4.3.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "semver>=3.0.2",
    "sphinx-lint>=1.0.0",
    "tabulate>=0.9.0",
    "unidiff>=0.7.5",
    "west>=0.14.0",
    "windows-curses>=2.4.0 ; sys_platform == 'win32'",
    "yamllint>=1.35.1",
    "zcbor>=0.8.0",
]
